--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
+<div class="FutureJourney">
+    <a href="myjourney.html">My Future</a><br>
+    <a href="myfuture.html">My Journey</a>
+</div>
+
 <div>
     <h1>Hello My Wanwisa</h1>
     <p class="w1"><h4>วันนี้เราจะมานําแนะตัวให้ทุกคนรู้จักกันเริ่มจากอะไรก่อนดี?</h4>
