--- a/myjourney.html
+++ b/myjourney.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
+<div class="CSTUStoryFuture">
+    <a href="index.html">My CSTU Story</a><br>
+    <a href="myfuture.html">My Future</a>
+</div>
     <h1 class="Year1234">เส้นทางตลอด 4 ปี ในรั้วบ้านCSTU</h1>
     <h2 class="together">เริ่มตอนด้วยวัยใสเข้ามาด้วยการเป็นเด็ก ปี 1 </h2>
     <p class="Year1">การที่ได้เข้ามาเป็นเด็กปี 1 สิ่งแรกที่คิดเลยอยากที่จะลองทําสิ่งต่างๆที่เรายังไม่เคยได้ทําอยากไปลองเล่นกีฬาทุกชนิด 
